Styles: Fix misaligned rating badge on book list

--- a/BookShelf.Mobile/css/styles.css
+++ b/BookShelf.Mobile/css/styles.css
@@ -375,6 +375,7 @@
 
 .books-list .book-rating { 
     float: right;
+    margin-top: 6px;
 }
 
 /*.books-list .book-rating-badge {
